Fix null pattern group name in assembler matrix terminal